gitops-app/service-app.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ic-app
  labels:
    app: ic-app
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: ic-app
  sessionAffinity: None
  type: ClusterIP
